--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,8 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+[rpc_endpoints]
+sepolia = "${RPC_SEPOLIA}"
+op_sepolia = "${RPC_OPTIMISM_SEPOLIA}"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
